--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
     "nuxt": "^4.2.1",
+    "papaparse": "^5.5.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
